--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "displayName": "Cython VSCode",
   "description": "Cython syntax checker + highlighter, Go to Definitions, type analysis, and more.",
   "version": "0.3.10",
-  "publisher": "ktnrg45",
+  "publisher": "ktnrg45 main and andrej cpdef enum, class beta",
   "icon": "icon.png",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ktnrg45/vs-code-cython.git"
+    "url": "https://github.com/andrejmuhic/vs-code-cython.git"
   },
   "engines": {
     "vscode": "^1.70.0"
@@ -107,7 +107,14 @@
   },
   "devDependencies": {
     "js-yaml": "^4.1.0",
-    "lerna": "^5.3.0",
+    "lerna": "^8.0.0",
     "syntaxdev": "^0.1.3"
+  },
+  "resolutions": {
+    "nan": "github:tec27/nan#remove_accessor_signature"
+  },
+  "dependencies": {
+    "@lerna/legacy-package-management": "^8.0.0",
+    "nan": "^2.18.0"
   }
 }
